--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,23 @@ services:
       context: .
       dockerfile: ./Dockerfile
     container_name: winebot
+    depends_on:
+      - mongo
+    env_file:
+      - .env
+  mongo:
+    restart: always
+    image: mongo:latest
+    container_name: winebot-mongo
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+    ports:
+      - "${MONGO_PORT}:${MONGO_PORT}"
+    volumes:
+      - mongo-data:/data/db
+volumes:
+  mongo-data:
+    driver: local
