restart always for admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
   admin:
     build:
       context: ./admin/
+    restart: always
     container_name: winebot-admin
     env_file:
       - .env
